products.html perdarytas pagal models.html (del tvarkos ir bendros isvaizdos - patogumo); models.py Product modelyje prideta photo ir description laukai

--- a/mysite/sandbox/templates/product.html
+++ b/mysite/sandbox/templates/product.html
@@ -8,7 +8,11 @@
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>INFO: </strong>
 <p><strong>Pro tip:</strong> in this Table you can find all prices for various BMW models.</p>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<h5><strong>About the Service:</strong></h5>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+{{ product.srvc_description | safe }}
+<br>
 <table class="table table-dark table-hover">
     <tr>
         <th>Vehicle Model:</th>
