--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -81,6 +81,9 @@
     </div>
 </nav>
 
+{% comment 'Nereikalinga kodo dalis' %}
+{% endcomment%}
+
 <div class="container">
     {% if messages %}
     {% for message in messages %}
