--- a/mysite/sandbox/templates/contacts.html
+++ b/mysite/sandbox/templates/contacts.html
@@ -2,38 +2,19 @@
 
 {% block title %}CONTACTS{% endblock %}
 
+
 {% block content %}
+
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3><strong>CONTACTS:</strong></h3>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>Main company info:</strong></p>
 <hr>
-<table class="table table-dark table-hover">
-    <tr>
-        <th></th>
-        <th>Main Company info:</th>
-    </tr>
-    <tr>
-        <th>URL:</th>
-        <td>www.supadupaservice.com</td>
-    </tr>
-    <tr>
-        <th>Fax:</th>
-        <td></td>
-    </tr>
-    <tr>
-        <th>Email:</th>
-        <td></td>
-    </tr>
-    <tr>
-        <th>Phone No.:</th>
-        <td></td>
-    </tr>
-    <tr>
-        <th>Props:</th>
-        <td></td>
-    </tr>
-</table>
+{% for field in main_info %}
+<div>
+    {{ field.company_info | safe }}
+</div>
+{% endfor %}
 <br>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>Main Contacts:</strong></p>
@@ -44,6 +25,44 @@
         <th>Email:</th>
         <th>Phone No.:</th>
     </tr>
+    {% for item in extra_info %}
+    <tr>
+        <td><strong>{{ item.department }}</strong></td>
+        <td>{{ item.email }}</td>
+        <td>{{ item.phone }}</td>
+        <td>{{ item.price }}</td>
+    </tr>
+    {% endfor %}
+</table>
+<br>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<hr4><strong>EXTRA INFO</strong></hr4>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+{% for item in main_info %}
+<p> {{ item.extra_info | safe }} </p>
+{% endfor %}
+
+
+
+
+{% comment 'Nereikalinga kodo dalis' %}
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<h3><strong>CONTACTS:</strong></h3>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<p><strong>Main company info:</strong></p>
+<hr>
+    {{ main_info }}
+<br>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<p><strong>Main Contacts:</strong></p>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<table class="table table-dark table-hover">
+    <tr>
+        <th>Department:</th>
+        <th>Email:</th>
+        <th>Phone No.:</th>
+    </tr>
+
     <tr>
         <td><strong>Client Success</strong></td>
         <td> service@gmail.com </td>
@@ -55,7 +74,7 @@
         <td> +370 6** ***** </td>
     </tr>
     <tr>
-        <td><strong>Manager</strong></td>
+        <td><strong>Management (Manager)</strong></td>
         <td> manager@gmail.com </td>
         <td> +370 6** ***** </td>
     </tr>
@@ -65,4 +84,6 @@
 <hr4><strong>EXTRA INFO</strong></hr4>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p>Your extra information...</p>
+
+{% endcomment%}
 {% endblock %}
