--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -108,6 +108,10 @@
     <div>
         <a class="btn btn-dark btn-default" href="{% url 'new_orderline' order.id %}">ADD ORDERLINE</a>
     </div>
+<br>
+    <div>
+        <a class="btn btn-dark btn-default" href="{% url 'pdf_report' order.id %}">DOWNLOAD PDF</a>
+    </div>
 
 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
