--- a/mysite/sandbox/templates/products.html
+++ b/mysite/sandbox/templates/products.html
@@ -14,7 +14,7 @@
     <div class="col-md-4 d-flex align-items-stretch">
           <div class="card mb-4 shadow-sm">
             {% if element.srvc_photo %}
-              <img src="{{ element.srvc_photo.url }}" class="card-img-top" alt="...">
+              <img height="" width="" src="{{ element.srvc_photo.url }}" class="card-img-top" alt="...">
             {% else %}
               <img src="{% static 'img/no-image.png' %}" class="card-img-top">
             {% endif %}
