--- a/mysite/sandbox/templates/order.html
+++ b/mysite/sandbox/templates/order.html
@@ -27,8 +27,6 @@
 {% endif %}
 
 
-
-
 <div>
     <a class="btn btn-dark btn-default" href="{% url 'order_update' order.id %}">UPDATE</a>
     <a class="btn btn-danger btn-default" href="{% url 'order_delete' order.id %}">DELETE</a>
@@ -107,11 +105,10 @@
 
     <div>
         <a class="btn btn-dark btn-default" href="{% url 'new_orderline' order.id %}">ADD ORDERLINE</a>
+        <a class="float-right btn btn-dark btn-default" href="{% url 'pdf_report' order.id %}">DOWNLOAD PDF</a>
     </div>
 <br>
-    <div>
-        <a class="btn btn-dark btn-default" href="{% url 'pdf_report' order.id %}">DOWNLOAD PDF</a>
-    </div>
+
 
 
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
