--- a/mysite/sandbox/templates/base.html
+++ b/mysite/sandbox/templates/base.html
@@ -39,10 +39,10 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'homepage' %}"><strong>HOMEPAGE</strong></a>
-
                         <a class="nav-link" href="{% url 'orders' %}"><strong>ORDERS</strong></a>
                         <a class="nav-link" href="{% url 'models' %}"><strong>BMW MODELS</strong></a>
                         <a class="nav-link" href="{% url 'products' %}"><strong>SERVICES</strong></a>
+                        <a class="nav-link" href="{% url 'contacts' %}"><strong>CONTACTS</strong></a>
                     </li>
                 {% else %}
                     <ul class="navbar-nav ml-auto">
