--- a/mysite/sandbox/templates/homepage.html
+++ b/mysite/sandbox/templates/homepage.html
@@ -4,13 +4,14 @@
 
 {% block content %}
 {% if user.is_authenticated %}
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3><strong>ABOUT US:</strong></h3>
-<hr>
-<p><strong>We are a brand new BMW auto-service with highly experienced employees.</strong></p>
-<p><strong>Our main focus is BMW models from soft-to-hard vehicles.</strong></p>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<p><strong>Information about auto-service.</strong></p>
+<p><strong>2nd paragraph.</strong></p>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>Main statistics:</strong></p>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <table class="table table-dark table-hover">
     <tr>
         <th>Info:</th>
@@ -37,18 +38,20 @@
         <td>{{ num_visits }}</td>
     </tr>
 </table>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <p><strong>Extra INFO:</strong></p>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <p><strong>For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
     <hr>
 {% else %}
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3><strong>ABOUT US:</strong></h3>
-<hr>
-<p><strong>We are a brand new BMW auto-service with highly experienced employees.</strong></p>
-<p><strong>Our main focus is BMW models from soft-to-hard vehicles.</strong></p>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<p><strong>Information about auto-service.</strong></p>
+<p><strong>2nd paragraph.</strong></p>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <p><strong>Main statistics:</strong></p>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <table class="table table-dark table-hover">
     <tr>
         <th>Info:</th>
@@ -70,8 +73,9 @@
         <td>{{ orders_done }}</td>
     </tr>
 </table>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <p><strong>Extra INFO:</strong></p>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <p><strong>For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
     <hr>
     {% endif %}
