Last fixes before present.

--- a/mysite/sandbox/templates/homepage.html
+++ b/mysite/sandbox/templates/homepage.html
@@ -41,7 +41,7 @@
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <p><strong>Extra INFO:</strong></p>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-    <p><strong>For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
+    <p><strong>E.G. For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
     <hr>
 {% else %}
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
@@ -76,7 +76,7 @@
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
     <p><strong>Extra INFO:</strong></p>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-    <p><strong>For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
+    <p><strong>E. G. For vehicles under status 'Done' - Pick-up Time is 1-6 PM.</strong></p>
     <hr>
     {% endif %}
 {% endblock %}
