--- a/mysite/sandbox/templates/models.html
+++ b/mysite/sandbox/templates/models.html
@@ -4,8 +4,9 @@
 
 {% block content %}
  {% load static %}
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3><strong>Models Available for Service:</strong></h3>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 {% if models %}
 <div class="row">
   {% for element in models %}
