--- a/mysite/sandbox/templates/products.html
+++ b/mysite/sandbox/templates/products.html
@@ -6,8 +6,9 @@
 
 
 {% load static %}
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h3><strong>Available Services:</strong></h3>
-<hr>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 {% if products %}
 <div class="row">
   {% for element in products %}
