--- a/mysite/sandbox/templates/orders.html
+++ b/mysite/sandbox/templates/orders.html
@@ -4,7 +4,9 @@
 
 {% block content %}
 {% if user.is_staff %}
-<h3>Our orders:</h3>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+<h3>ALL ORDERS:</h3>
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
 
 <ol>
   {% for element in orders %}
@@ -23,6 +25,6 @@
     </ol>
 {% else %}
 <h3><strong>Not Found: 404 ERROR.</strong></h3>
-<h3><strong>This Information is Forbiden!</strong></h3>
+
 {% endif %}
 {% endblock %}
